--- a/style.css
+++ b/style.css
@@ -14,16 +14,12 @@ body {
     overflow: hidden;
 }
 
-.hidden {
-    display: none;
-}
-
 .imageHidden {
     opacity: 0;
 }
 
 .container {
-    padding: 5vh 0;
+    /* padding: 5vh 0; */
     background-color: rgba(238, 215, 215, 0.5);
     border-radius: 12px;
     height: 45rem;
@@ -39,7 +35,7 @@ body {
     flex-direction: column;
     align-items: center;
     flex: 1 1 50%;
-    padding: 9rem;
+    padding: 5.5rem;
     transition: all 0.75s ease 0s;
 }
 
@@ -82,7 +78,7 @@ body {
 .dice-image {
     position: relative;
     left: 32rem;
-    bottom: 12rem;
+    bottom: 7rem;
     height: 10rem;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 2rem 5rem;
     border-radius: 15px;
@@ -150,9 +146,15 @@ body {
 }
 
 .player--active {
+    border-radius: 12px;
     background-color: rgba(255, 251, 251, 0.5);
 }
 
 .player--win {
+    border-radius: 12px;
     background-color: rgba(204, 224, 24, 0.8);
+}
+
+.diceShow {
+    opacity: 100;
 }
