--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .imageHidden {
@@ -165,6 +165,23 @@ body {
     opacity: 100;
 }
 
+.footer {
+    font-size: 1.1rem;
+    text-align: center;
+    margin-top: 1rem;
+    color: white;
+}
+
+.footer a {
+    color: yellow;
+    text-decoration: none;
+}
+
+.footer a:hover {
+    cursor: pointer;
+    color: rgb(75, 243, 243);
+}
+
 
 /* Classes to make modal work */
 
@@ -215,13 +232,13 @@ body {
     z-index: 5;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1280px) {
     .container {
-        height: 40rem;
+        height: 30rem;
         width: 60rem;
     }
     .player {
-        padding: 4rem;
+        padding: 1rem;
     }
     .middle-section {
         bottom: 23rem;
@@ -229,6 +246,7 @@ body {
     }
     .player .current-score-box {
         padding: 1rem 3rem;
+        margin-top: 1rem;
     }
     .btn-hold {
         top: -1rem;
@@ -237,15 +255,34 @@ body {
     .target-score {
         top: 1rem;
     }
+    .btn-rollDice {
+        left: -7rem;
+    }
+    .btn-rollDice {
+        bottom: 2rem;
+    }
+    .dice-image {
+        bottom: 5rem;
+    }
+    .btn-new {
+        bottom: 18rem;
+    }
+    .btn-rules {
+        bottom: 18rem;
+    }
+    .modal {
+        font-size: 1.6rem;
+        padding: 2rem;
+    }
 }
 
 @media (max-width: 992px) {
     .container {
-        height: 41.7rem;
+        height: 33.7rem;
         width: 45rem;
     }
     .player {
-        padding: 5rem;
+        padding: 3rem;
     }
     .player h2 {
         font-size: 45px;
@@ -256,26 +293,28 @@ body {
     .target-score {
         font-size: 20px;
         left: 21.5rem;
-        top: 6.5rem;
+        top: -20.5rem;
     }
     .dice-image {
         left: 26rem;
         height: 8rem;
-        bottom: 5rem;
+        bottom: 2rem;
     }
     .btn-hold {
-        top: 0rem;
+        top: 2rem;
         right: -25.5rem;
     }
     .btn-rollDice {
-        left: -5.5rem;
-        bottom: 1rem;
+        left: -6.5rem;
+        bottom: -1rem;
     }
     .btn-new {
-        left: 7.5rem;
+        left: -0.8rem;
+        bottom: 16.7rem;
     }
     .btn-rules {
-        left: 11.5rem;
+        left: 22.5rem;
+        bottom: 16.5rem;
     }
     .modal {
         font-size: 1.6rem;
@@ -284,15 +323,16 @@ body {
 
 @media (max-width: 768px) {
     .container {
-        height: 38.9rem;
-        width: 32rem;
+        height: 26.9rem;
+        margin: 7rem auto 0;
+        width: 30rem;
     }
     .player h2 {
         text-align: center;
         font-size: 37px;
     }
     .player .current-score-box {
-        margin: 3rem 0.5rem;
+        margin: 0rem 0.5rem;
         padding: 1rem 1rem;
     }
     .player .score {
@@ -310,32 +350,32 @@ body {
         padding: 2rem;
     }
     .dice-image {
-        left: 20rem;
-        bottom: 0rem;
+        left: 18.5rem;
+        bottom: -6rem;
         height: 7rem;
     }
     .btn {
         font-size: 1.3rem;
     }
     .btn-rules {
-        left: 7rem;
-        bottom: 25rem;
+        left: -13rem;
+        bottom: 12.1rem;
     }
     .btn-rollDice {
-        left: 8rem;
-        bottom: 6rem;
+        left: 5rem;
+        bottom: -0.3rem;
     }
     .btn-hold {
-        top: -6rem;
-        right: -17.5rem;
+        top: 0.4rem;
+        right: -16.5rem;
     }
     .btn-new {
-        bottom: 25rem;
-        left: 3rem;
+        bottom: 15.5rem;
+        left: -1.2rem;
     }
     .target-score {
-        left: 13.5rem;
-        top: 13rem;
+        left: 18.5rem;
+        top: -21rem;
         background-color: rgb(255, 255, 255, 0.9);
         padding: 1rem 2rem;
         border-radius: 12px;
@@ -347,29 +387,39 @@ body {
     .modal {
         font-size: 1.3rem;
     }
+    .footer {
+        width: 31rem;
+        margin: 1rem;
+        font-size: 1rem;
+    }
 }
 
 @media (max-width: 576px) {
+    body {
+        display: block;
+        margin-top: 11rem;
+    }
     .container {
-        height: 42.4rem;
-        width: 21rem;
+        height: 22.6rem;
+        width: 24rem;
     }
     .target-score {
-        left: 9.7rem;
-        top: 10rem;
+        left: 12rem;
+        top: -17.6rem;
         padding: 0.2rem;
-        font-size: 19px;
+        font-size: 17.5px;
     }
     .player {
         flex-direction: unset;
     }
     .player--0 {
-        flex-direction: column;
-        padding: 0 0 4.5rem 0;
+        padding: 0.5rem 2rem 4.5rem 1rem;
     }
     .player--1 {
-        flex-direction: column-reverse;
-        padding: 4.5rem 0 0 0;
+        padding: 4.5rem 2rem 0.5rem 1rem;
+    }
+    .player h2 {
+        font-size: 26px;
     }
     .player .dice-turn {
         font-size: 33px;
@@ -385,86 +435,107 @@ body {
     }
     .player .current-score-box .current-label {
         margin-bottom: 0rem;
+        font-size: 16px;
+    }
+    .btn {
+        padding: 0.5rem 1rem;
     }
     .btn-rules {
-        left: 20rem;
-        bottom: 30.2rem;
+        left: 23.6rem;
+        bottom: 14.6rem;
     }
     .btn-rollDice {
-        left: -0.5rem;
-        bottom: 8.5rem;
+        left: 1.5rem;
+        bottom: -1rem;
         width: 3rem;
     }
     .btn-hold {
-        top: -13.5rem;
-        right: -21.8rem;
+        top: 2rem;
+        right: -10.5rem;
         width: 3rem;
     }
     .dice-image {
-        left: 14.8rem;
-        bottom: 1.5rem;
+        left: 15.9rem;
+        bottom: -8.5rem;
         height: 6.5rem;
     }
     .btn-new {
-        bottom: 27.5rem;
-        left: 0.7rem;
+        bottom: 12rem;
+        left: 0.5rem;
     }
     .modal {
         padding: 2rem;
         top: 48%;
         line-height: 1.2rem;
     }
+    .footer {
+        width: 22rem;
+        margin: 1rem auto;
+    }
 }
 
 @media (max-width: 416px) {
     body {
-        height: 100vh;
-        align-items: unset;
-        padding-top: 4rem;
+        display: flex;
+        margin-top: 0rem;
     }
     .container {
-        width: 17rem;
-        height: 36.8rem;
+        width: 15rem;
+        height: 26rem;
     }
     .player h2 {
-        font-size: 30px;
+        font-size: 26px;
     }
     .player--0 {
         padding: 0 0 2.5rem 0;
+        flex-direction: column;
     }
     .player--1 {
         padding: 2.5rem 0 0 0;
+        flex-direction: column-reverse;
+    }
+    .player .current-score-box {
+        padding: 0rem 1rem;
     }
     .player .dice-turn {
-        font-size: 29px;
+        display: none;
+    }
+    .player .score {
+        font-size: 52px;
     }
     .target-score {
-        left: 8.4rem;
-        top: 4rem;
-        font-size: 18px;
+        left: 7.5rem;
+        top: -21.5rem;
     }
     .dice-image {
-        left: 13.3rem;
-        bottom: -2rem;
-        height: 5.5rem;
+        left: 12.8rem;
+        bottom: -7.7rem;
+        height: 4.5rem;
     }
     .btn-rollDice {
-        left: -2.5rem;
-        bottom: 7.5rem;
+        left: 0.5rem;
+        bottom: -2.4rem;
+    }
+    .btn {
+        font-size: 1rem;
     }
     .btn-hold {
-        top: -12.8rem;
-        right: -20.2rem;
+        top: -2rem;
+        right: -18.2rem;
     }
     .btn-rules {
-        left: 18.5rem;
-        bottom: 25.6rem;
+        left: 16.3rem;
+        bottom: 15.9rem;
     }
     .btn-new {
-        bottom: 22.7rem;
-        left: 6rem;
+        bottom: 13.5rem;
+        left: 2rem;
     }
     .winningScoreNumber {
         padding: 0rem 1rem 0 1rem;
+    }
+    .footer {
+        width: 18rem;
+        margin: 0.5rem auto 1rem;
     }
 }
